# openmp

./: .gitignore  CMakeLists.txt  README.md
src/: breaker_for_omp.c  collapse.c  loop_bloc_synchronisation.c  parallel_section.c  reduction.c  sections.c  thread_id.c
